<resources>
    <!-- Main screen -->
    <string name="app_name">MagFielder</string>
    <string name="latitude">Latitude:</string>
    <string name="hint">Decimal format</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude(m):</string>
    <string name="date">Date:</string>
    <string name="usegps">Use GPS</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="results">Results</string>
    <string name="Bhor">Bxy(nT):</string>
    <string name="Btotal">Btotal(nT):</string>
    <string name="Decl">North corr.(deg):</string>
    <string name="INCL">DIP(deg):</string>
    <string name="north_comp">North comp.(nT):</string>
    <string name="east_comp">East comp.(nT):</string>
    <string name="vert_comp">Vertical comp.(nT):</string>
    <string name="title_activity_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Errors -->
    <string name="bad_signal">Bad GPS signal</string>
    <string name="gps_seems_turnoff">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="field_is_empty">Fill all input fields.</string>
    <string name="format_exception">Invalid input data.</string>
    <!-- Menu Titles -->
    <string name="menuSettings">Settings</string>
    <string name="menuInfo">Help</string>

    <!-- Preference Titles -->
    <string name="models_header">Model settings</string>
    <string name="results_header">Results output</string>

    <!-- Messages Preferences -->
    <string name="model_title">Magnetic model:</string>
    <string name="shape_title">Shape of Earth:</string>
    <string name="dateformat_title">Date format:</string>

    <!-- Results Preferences -->
    <string name="btotal_show" translatable="false">Btotal</string>
    <string name="dip_show" translatable="false">DIP</string>
    <string name="decl_show" translatable="false">North correction</string>
    <string name="bxy_show" translatable="false">Bxy</string>
    <string name="north_show" translatable="false">North component</string>
    <string name="east_show" translatable="false">East component</string>
    <string name="vert_show" translatable="false">Vertical component</string>

    <string name="send_to">Share results via:</string>
    <string name="copy_message">Copied to clipboard.</string>
    <string name="southLatButton" translatable="false">S</string>
    <string name="northLatButton" translatable="false">N</string>
    <string name="westLongButton" translatable="false">W</string>
    <string name="eastLongButton" translatable="false">E</string>

</resources>
